<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.PaymentActivity">

        <LinearLayout
            android:id="@+id/lin_success"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/img_payment_sucess"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/thank_you"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:text="@string/your_payment_was_successful"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/txt_trans_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_name"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/txt_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/lin_failed"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_payment_failed"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/payment_failed"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:text="@string/it_seems_we_have_not_received_money"
                android:textSize="28sp" />


        </LinearLayout>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_logo"
        android:layout_marginTop="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>