<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/bg_logo" />

        <TextView
            android:id="@+id/txtDonationFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:padding="10dp"
            android:text="@string/details_for_donation"
            android:textColor="@color/primaryColor"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/mandatory"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edit_text_dummy_bg"
                    android:hint="@string/name"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingStart="7dp" />

            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/editPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edit_text_dummy_bg"
                    android:hint="@string/phone_number"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingStart="7dp" />

            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_amount"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/mandatory"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/editEnterAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edit_text_dummy_bg"
                    android:hint="@string/enter_amount"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingStart="7dp" />

            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPay"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:text="@string/pay"
                android:textSize="26sp"
                app:cornerRadius="10dp"
                android:lineSpacingExtra="4dp"
                android:textAllCaps="true"
                tools:ignore="RtlSymmetry" />



        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="89dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_detail_top_right" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_detial_bottom_bg" />


</RelativeLayout>