<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/bg" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/txtChooseLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/choose_your_language"
                android:textColor="@color/secondaryColor"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/cardDonation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtChooseLanguage"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/cardDonationMl"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_donation" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/ml_donation"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cardDonationEn"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_donation" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/EN_donation"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/cardDonation"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_xenia"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/highlight_bg" />

</RelativeLayout>